Overlap bug

--- a/src/assets/style/_containers.scss
+++ b/src/assets/style/_containers.scss
@@ -16,6 +16,7 @@
   .node-title {
     
     z-index: 2;
+    pointer-events: none;
     
     span {
       color: $co_white;
